--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.40.14",
+    "@slidev/cli": "^0.40.13",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
+  },
+  "devDependencies": {
+    "@iconify-json/emojione-monotone": "^1.1.4",
+    "@iconify-json/fluent": "^1.1.19",
+    "@iconify-json/mdi": "^1.1.50",
+    "@iconify-json/uim": "^1.1.5",
+    "playwright-chromium": "^1.32.3"
   }
 }
